2007-07-08  Christian Stimming  <stimming@tuhh.de>

	* src/base/plugindescr.c: As per the reminder here, enabled the
	_free() function in _freeAll() because gnucash doesn't depend on
	it anymore for quite some time by now.

	* src/base/list2.h: Add sanity check in ForEach so that calling
	this with a NULL list doesn't crash.

2007-06-17  Andreas Köhler  <andi5.py@gmx.net>

	* configure.ac: For the gwentest libxml2 check and --cflags and
	--libs retrieval, use pkg-config rather than xml2-config.

	* m4/searchfiles.m4: When searching for files and choosing the
	path separator, examine $build instead of $host.

	* m4/os.m4: Replace all target tests by ones for the host system
	type.  Host and target would only differ if we were about to build
	a cross-compiler, but using host is more precise nonetheless.

	* configure.ac: Use AC_CANONICAL_BUILD and _HOST, but not _TARGET

===========================================================================
MARK: released gwenhywfar-2.6.0 (2007/06/09, r1225)
===========================================================================

2007-05-11  Christian Stimming  <stimming@tuhh.de>

	* src/base/logger.c: Fix LoggerType_Function. By Hendrik Weimer.


2007/03/12: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- src/os/posix/process.c: now use GWEN_BUFFER to collect arguments for
  the process to start instead of fixed buffers


2007-03-10  Christian Stimming  <stimming@tuhh.de>

	* src/base/list2.h: Add macros for functions IsEmpty, FindIter,
	Contains to make available list functions more complete.


2007-03-09  Christian Stimming  <stimming@tuhh.de>

	* src/base/list.h: Add functions IsEmpty, FindIter, Contains to
	make available list functions more complete.


===========================================================================
MARK: released gwenhywfar-2.5.4 (2007/02/16, r1165)
===========================================================================

